--- a/ansible/hardware_vars/0.1.yml
+++ b/ansible/hardware_vars/0.1.yml
@@ -17,8 +17,7 @@ compute_nodes:
       name: "compute1",
     }
 
-hardware_compute_configure_roles:
-  - "hardware_specific/vllm_build"
+hardware_compute_configure_roles: []
 
 hardware_control_configure_roles: []
 
