--- a/ansible/roles/base/handlers/main.yml
+++ b/ansible/roles/base/handlers/main.yml
@@ -1,3 +1,4 @@
 ---
-- name: apply netplan
-  command: netplan apply
+- name: Apply netplan
+  ansible.builtin.command: netplan apply
+  changed_when: false
