--- a/ansible/build_image.yml
+++ b/ansible/build_image.yml
@@ -1,41 +1,43 @@
 ---
 # Play 1: Gather SSH key from the user running the playbook
-- hosts: localhost
+- name: Gather local user SSH key
+  hosts: localhost
   connection: local
-  become: no
+  become: false
   vars_files:
     - vars/main.yml
     - "hardware_vars/{{ hardware_version }}.yml"
   tasks:
     - name: Set real user dir fact
-      set_fact:
+      ansible.builtin.set_fact:
         real_user_dir: "{{ ansible_env.HOME }}"
 
     - name: Read SSH public key
-      slurp:
+      ansible.builtin.slurp:
         src: "{{ real_user_dir }}/.ssh/id_ed25519.pub"
       register: ssh_public_key_slurp
 
     - name: Set SSH public key fact
-      set_fact:
+      ansible.builtin.set_fact:
         ssh_public_key: "{{ ssh_public_key_slurp['content'] | b64decode }}"
 
 # Play 2: Prepare the chroot environment on the control node
-- hosts: localhost
+- name: Prepare golden image chroot environment
+  hosts: localhost
   connection: local
-  become: yes
+  become: true
   vars_files:
     - vars/main.yml
     - "hardware_vars/{{ hardware_version }}.yml"
   pre_tasks:
     - name: Check for passwordless sudo
-      command: sudo -n true
+      ansible.builtin.command: sudo -n true
       register: sudo_check
       ignore_errors: true
       changed_when: false
 
     - name: Fail if passwordless sudo is not configured
-      fail:
+      ansible.builtin.fail:
         msg: |
           Passwordless sudo is not configured for the current user.
           Please configure it by running 'sudo visudo' on the control node
@@ -45,35 +47,32 @@
       when: sudo_check.rc != 0
   tasks:
     - name: Install debootstrap dependencies
-      apt:
+      ansible.builtin.apt:
         name:
           - debootstrap
         state: present
-        update_cache: yes
+        update_cache: true
 
     - name: Create NFS root directory
-      file:
+      ansible.builtin.file:
         path: /srv/nfs/ubuntu_golden
         state: directory
         mode: "0755"
 
-    - name: Check if debootstrap has already run
-      stat:
-        path: /srv/nfs/ubuntu_golden/etc/os-release
-      register: debootstrap_check
-
     - name: Run debootstrap to create Ubuntu 24.04 filesystem
-      command: debootstrap --arch=amd64 noble /srv/nfs/ubuntu_golden
-      when: not debootstrap_check.stat.exists
+      ansible.builtin.command: debootstrap --arch=amd64 noble /srv/nfs/ubuntu_golden
+      args:
+        creates: /srv/nfs/ubuntu_golden/etc/os-release
 
     - name: Copy host's resolv.conf for network access in chroot
-      copy:
+      ansible.builtin.copy:
         src: /etc/resolv.conf
         dest: /srv/nfs/ubuntu_golden/etc/resolv.conf
-        remote_src: yes
+        remote_src: true
+        mode: "0644"
 
     - name: Mount pseudo-filesystems for chroot
-      mount:
+      ansible.posix.mount:
         path: "/srv/nfs/ubuntu_golden/{{ item }}"
         src: "/{{ item }}"
         fstype: none
@@ -85,7 +84,7 @@
         - dev
 
     - name: Add golden_image_chroot host to inventory
-      add_host:
+      ansible.builtin.add_host:
         name: golden_image_chroot
         ansible_connection: chroot
         ansible_host: /srv/nfs/ubuntu_golden
@@ -93,24 +92,29 @@
       changed_when: false
 
 # Play 3: Configure the golden image via chroot and cleanup
-- hosts: golden_image_chroot
-  become: yes
+- name: Configure golden image and cleanup
+  hosts: golden_image_chroot
+  become: true
   vars_files:
     - "vars/main.yml"
     - "hardware_vars/{{ hardware_version }}.yml"
   tasks:
-    - block:
+    - name: Configure chroot environment
+      block:
         - name: Include chroot_config role
-          include_role:
+          ansible.builtin.include_role:
             name: chroot_config
         - name: Include networkd_wol role
-          include_role:
+          ansible.builtin.include_role:
             name: networkd_wol
+        - name: Include devtools role
+          ansible.builtin.include_role:
+            name: devtools
         - name: Include venv role
-          include_role:
+          ansible.builtin.include_role:
             name: venv
         - name: Include vllm_source role
-          include_role:
+          ansible.builtin.include_role:
             name: vllm_source
         - name: Include hardware-specific golden image roles
           ansible.builtin.include_role:
@@ -122,4 +126,4 @@
             name: chroot_cleanup
             apply:
               delegate_to: localhost
-              become: yes
+              become: true
