--- a/ansible/roles/gateway/tasks/main.yml
+++ b/ansible/roles/gateway/tasks/main.yml
@@ -1,26 +1,30 @@
 - name: Install iptables-persistent
-  apt:
+  ansible.builtin.apt:
     name: iptables-persistent
     state: present
 
 - name: Enable IP forwarding
-  sysctl:
+  ansible.posix.sysctl:
     name: net.ipv4.ip_forward
-    value: '1'
-    sysctl_set: yes
+    value: "1"
+    sysctl_set: true
     state: present
-    reload: yes
-
-- name: Get default gateway interface
-  shell: ip route | grep default | awk '{print $5}'
-  register: default_gateway_interface
+    reload: true
 
 - name: Configure iptables for NAT
-  iptables:
+  ansible.builtin.iptables:
     table: nat
     chain: POSTROUTING
-    out_interface: "{{ default_gateway_interface.stdout }}"
+    out_interface: "{{ ansible_default_ipv4.interface }}"
     jump: MASQUERADE
 
-- name: Save iptables rules
-  shell: iptables-save > /etc/iptables/rules.v4
+- name: Get current iptables rules
+  ansible.builtin.command: iptables-save
+  register: iptables_rules
+  changed_when: false
+
+- name: Save iptables rules to file
+  ansible.builtin.copy:
+    content: "{{ iptables_rules.stdout }}"
+    dest: /etc/iptables/rules.v4
+    mode: "0644"
