--- a/ansible/roles/hardware_specific/intel_oneapi/tasks/main.yml
+++ b/ansible/roles/hardware_specific/intel_oneapi/tasks/main.yml
@@ -5,7 +5,7 @@
       - gpg-agent
       - wget
     state: present
-    update_cache: yes
+    update_cache: true
 
 - name: Get Intel graphics GPG key
   ansible.builtin.get_url:
@@ -25,4 +25,4 @@
     name:
       - intel-basekit=2025.1.3-6
     state: present
-    update_cache: yes
+    update_cache: true
