more ansible lint fixes for the new version of ansible-lint

--- a/ansible/clean_image.yml
+++ b/ansible/clean_image.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: localhost
+- name: Clean up and remove the golden image
+  hosts: localhost
   become: true
-  name: Clean up and remove the golden image
   tasks:
     - name: Ensure chroot filesystems are unmounted
       ansible.builtin.include_role:
