--- a/ansible/roles/hardware_specific/intel_oneapi/tasks/verify.yml
+++ b/ansible/roles/hardware_specific/intel_oneapi/tasks/verify.yml
@@ -6,6 +6,7 @@
   register: sycl_ls_path
   changed_when: false
   failed_when: false
+  become: true
   become_user: compute
 
 - name: Fail if sycl-ls is not installed
@@ -19,6 +20,7 @@
     sycl-ls
   register: sycl_ls_output
   changed_when: false
+  become: true
   become_user: compute
   when: sycl_ls_path.rc == 0
 
