--- a/ansible/roles/pxe_boot/tasks/main.yml
+++ b/ansible/roles/pxe_boot/tasks/main.yml
@@ -19,31 +19,31 @@
   ansible.builtin.find:
     paths: /srv/nfs/ubuntu_golden/boot
     patterns: "vmlinuz-*"
-  register: kernel_files
+  register: pxe_boot_kernel_files
 
 - name: Fail if no kernel is found
   ansible.builtin.fail:
     msg: "Could not find a kernel image in /srv/nfs/ubuntu_golden/boot"
-  when: kernel_files.files | length == 0
+  when: pxe_boot_kernel_files.files | length == 0
 
 - name: Set latest_kernel_path fact
   ansible.builtin.set_fact:
-    latest_kernel_path: "{{ (kernel_files.files | sort(attribute='mtime'))[-1].path }}"
+    pxe_boot_latest_kernel_path: "{{ (pxe_boot_kernel_files.files | sort(attribute='mtime'))[-1].path }}"
 
 - name: Find all initrd images in the NFS root
   ansible.builtin.find:
     paths: /srv/nfs/ubuntu_golden/boot
     patterns: "initrd.img-*"
-  register: initrd_files
+  register: pxe_boot_initrd_files
 
 - name: Fail if no initrd is found
   ansible.builtin.fail:
     msg: "Could not find an initrd image in /srv/nfs/ubuntu_golden/boot"
-  when: initrd_files.files | length == 0
+  when: pxe_boot_initrd_files.files | length == 0
 
 - name: Set latest_initrd_path fact
   ansible.builtin.set_fact:
-    latest_initrd_path: "{{ (initrd_files.files | sort(attribute='mtime'))[-1].path }}"
+    pxe_boot_latest_initrd_path: "{{ (pxe_boot_initrd_files.files | sort(attribute='mtime'))[-1].path }}"
 
 - name: Copy kernel and initrd from NFS root to TFTP directory
   ansible.builtin.copy:
@@ -52,30 +52,36 @@
     remote_src: true
     mode: "0644"
   loop:
-    - { src: "{{ latest_kernel_path }}", dest: "/srv/tftp/boot/grub/vmlinuz" }
-    - { src: "{{ latest_initrd_path }}", dest: "/srv/tftp/boot/grub/initrd" }
+    - {
+        src: "{{ pxe_boot_latest_kernel_path }}",
+        dest: "/srv/tftp/boot/grub/vmlinuz",
+      }
+    - {
+        src: "{{ pxe_boot_latest_initrd_path }}",
+        dest: "/srv/tftp/boot/grub/initrd",
+      }
 
 - name: Check for SSH public key on control node
   ansible.builtin.stat:
     path: "~/.ssh/id_ed25519.pub"
-  register: ssh_key_file
+  register: pxe_boot_ssh_key_file
   become: false
 
 - name: Fail if SSH key is not found on control node
   ansible.builtin.fail:
     msg: "SSH public key not found at ~/.ssh/id_ed25519.pub on the control node. Please create one."
-  when: not ssh_key_file.stat.exists
+  when: not pxe_boot_ssh_key_file.stat.exists
   become: false
 
 - name: Read SSH public key from control node
   ansible.builtin.slurp:
     src: "~/.ssh/id_ed25519.pub"
-  register: ssh_key_content
+  register: pxe_boot_ssh_key_content
   become: false
 
 - name: Set ssh_key fact
   ansible.builtin.set_fact:
-    ssh_authorized_key: "{{ ssh_key_content.content | b64decode }}"
+    pxe_boot_ssh_authorized_key: "{{ pxe_boot_ssh_key_content.content | b64decode }}"
 
 - name: Create GRUB boot menu
   ansible.builtin.template:
