organized ansible/roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 remote_tmp = /tmp
 host_key_checking = False
+roles_path = ./ansible/roles/control:./ansible/roles/compute:./ansible/roles/common
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes
