--- a/ansible/roles/control/base/tasks/main.yml
+++ b/ansible/roles/control/base/tasks/main.yml
@@ -13,8 +13,14 @@
       - pxelinux
       - p7zip-full
       - grub-efi-amd64-bin
-      - ansible-lint
+      - docker.io
     state: present
+
+- name: Ensure docker daemon is running
+  ansible.builtin.service:
+    name: docker
+    state: started
+    enabled: true
 
 - name: Create TFTP and HTTP directories
   ansible.builtin.file:
@@ -42,3 +48,13 @@
     dest: /etc/netplan/99-onedotzero-compute.yaml
     mode: "0644"
   notify: Apply netplan
+  changed_when: false
+
+- name: Add ansible user to the docker group
+  ansible.builtin.user:
+    name: "{{ ansible_env.SUDO_USER }}"
+    groups: docker
+    append: yes
+
+- name: Reset SSH connection to apply group changes
+  ansible.builtin.meta: reset_connection
