--- a/ansible/roles/control/base/molecule/default/converge.yml
+++ b/ansible/roles/control/base/molecule/default/converge.yml
@@ -1,7 +1,7 @@
 ---
 - name: Converge
   hosts: all
-  tasks:
-    - name: "Include base"
-      ansible.builtin.include_role:
-        name: "base"
+  vars_files:
+    - ../../../../../vars/main.yml
+  roles:
+    - base
