fix netboot_e2e test

--- a/ansible/roles/control/python_tools/tasks/main.yml
+++ b/ansible/roles/control/python_tools/tasks/main.yml
@@ -17,4 +17,5 @@
       ~/venvs/onedotzero/bin/ansible-galaxy collection install
       ansible.posix
       community.general
+      community.crypto
   changed_when: false
