--- a/ansible/build_image.yml
+++ b/ansible/build_image.yml
@@ -11,6 +11,19 @@
       ansible.builtin.set_fact:
         real_user_dir: "{{ ansible_env.HOME }}"
 
+    - name: Ensure .ssh directory exists
+      ansible.builtin.file:
+        path: "{{ real_user_dir }}/.ssh"
+        state: directory
+        mode: "0700"
+
+    - name: Generate ed25519 SSH key if it does not exist
+      community.crypto.openssh_keypair:
+        path: "{{ real_user_dir }}/.ssh/id_ed25519"
+        type: ed25519
+        state: present
+        force: false
+
     - name: Read SSH public key
       ansible.builtin.slurp:
         src: "{{ real_user_dir }}/.ssh/id_ed25519.pub"
@@ -47,6 +60,22 @@
     - name: Ensure chroot filesystems are unmounted
       ansible.builtin.include_role:
         name: control/chroot_connection_cleanup
+
+    - name: Install Ansible
+      ansible.builtin.apt:
+        name: ansible
+        state: present
+        update_cache: true
+
+    - name: Install community.general Ansible collection
+      ansible.builtin.command:
+        cmd: ansible-galaxy collection install community.general
+        creates: "{{ ansible_user_dir }}/.ansible/collections/ansible_collections/community/general"
+
+    - name: Install community.crypto Ansible collection
+      ansible.builtin.command:
+        cmd: ansible-galaxy collection install community.crypto
+        creates: "{{ ansible_user_dir }}/.ansible/collections/ansible_collections/community/crypto"
 
   tasks:
     - name: Install debootstrap dependencies
@@ -95,6 +124,10 @@
         ssh_key_for_chroot: "{{ ssh_public_key }}"
       changed_when: false
 
+    - name: Pause for interactive debugging
+      ansible.builtin.pause:
+        seconds: 36000
+
 # Play 3: Configure the golden image via chroot and cleanup
 - name: Configure golden image and cleanup
   hosts: golden_image_chroot
@@ -128,8 +161,7 @@
           ansible.builtin.include_role:
             name: compute/chroot_cleanup
         - name: Run chroot cleanup tasks on localhost
-          ansible.builtin.include_role:
-            name: control/chroot_connection_cleanup
-            apply:
-              delegate_to: localhost
-              become: true
+          become: true
+          block:
+            - ansible.builtin.include_role:
+                name: control/chroot_connection_cleanup
