--- a/ansible/hardware_vars/0.1.yml
+++ b/ansible/hardware_vars/0.1.yml
@@ -1,7 +1,10 @@
 ---
-# Hardware v0.1 Configuration (A770)
+# Hardware v0.1 Configuration
 control_host: "control_0_1"
+# Interface on the control node facing the compute nodes
 compute_interface: "enx8cae4cf44e21"
+# Interface on the compute nodes facing the control node
+control_interface: enp6s0
 arch: "amd64"
 debootstrap_arch: "amd64"
 
@@ -17,11 +20,8 @@ hardware_compute_configure_roles: []
 
 hardware_control_configure_roles: []
 
-hardware_golden_image_roles: []
-  # - "hardware_specific/intel_arc_drivers"
-  # - "hardware_specific/intel_oneapi"
+hardware_golden_image_roles:
+  - "hardware_specific/amd_radeon_drivers"
 
 hardware_compute_test_roles:
-  - "hardware_specific/ipex_llm"
-  - "hardware_specific/intel_arc_drivers"
-  - "hardware_specific/intel_oneapi"
+  - "hardware_specific/amd_radeon_drivers"
